--- a/style.css
+++ b/style.css
@@ -88,3 +88,28 @@ button {
     display: flex;
     flex-direction: column;
 }
+
+.info .heading {
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1F2937;
+    text-align: center;
+    padding-bottom: 16px;
+}
+
+.info .container {
+    display: flex;
+    justify-content: center;
+    gap: 64px;
+}
+
+.image-text {
+    width: 160px;
+    text-align: center;
+}
+
+.image-text .image {
+    height: 160px;
+    border: 4px solid #3882F6;
+    border-radius: 16px;
+}
