--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ button {
     flex-direction: column;
 }
 
+.info {
+    padding-bottom: 64px;
+}
+
 .info .heading {
     font-size: 36px;
     font-weight: extra-bold;
@@ -112,4 +116,29 @@ button {
     height: 160px;
     border: 4px solid #3882F6;
     border-radius: 16px;
+}
+
+.quotes {
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 64px 0px;
+}
+
+.quotes .main {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+}
+
+.quotes .person {
+    font-size: 24px;
+    color: #1F2937;
+    font-weight: bold;
+    align-self: flex-end;
 }
