--- a/style.css
+++ b/style.css
@@ -142,3 +142,42 @@ button {
     font-weight: bold;
     align-self: flex-end;
 }
+
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 128px 0px;
+}
+.call-to-action .container {
+    background-color: #3882F6;
+    color:#f9faf8;
+    display: flex;
+    width: 1000px;
+    border-radius: 16px;
+    padding: 64px 0px;
+    justify-content: space-around;
+}
+
+.call-to-action button {
+    border-color: #E5E7EB;
+    border-style: solid;
+}
+p {
+    margin: 0px;
+    padding: 0px;
+}
+
+.call-to-action .main {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+
+footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    text-align: center;
+    padding: 32px 0px;
+}
